--- a/from 4 frontend ANi/styles.css
+++ b/from 4 frontend ANi/styles.css
@@ -30,6 +30,8 @@ html {
     gap: 10px;
     transition: background 0.3s ease;
     box-shadow: 0 2px 5px rgba(0,0,0,0.15);
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
 
 .spcl-btn:hover {
