--- a/style/styleForApp.css
+++ b/style/styleForApp.css
@@ -3,7 +3,7 @@
 }
 
 #map{
-    height: 100vh;
+    height: 100%;
     width: 100%;
     position: absolute;
     z-index: 1;
@@ -52,6 +52,9 @@ body {
 }
 
 .content {
+    background: rgba(255, 255, 255, 0.6); /* translucent white */
+  backdrop-filter: blur(10px);           /* blur the content behind */
+  -webkit-backdrop-filter: blur(5px);   /* for Safari */
     z-index: 3;
   position: absolute;
   bottom: 20px;
@@ -61,7 +64,6 @@ body {
   width: 50%;
   margin: auto;
   border-radius: 10px;
-  background-color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   font-size: 1.2rem;
   font-weight: bold;
