--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,11 @@
+:root { 
+    --ui-font: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif; 
+}
+
+
+
+
+
 /* ============================= */
 /* GLOBAL STYLES */
 /* ============================= */
@@ -6,10 +14,10 @@
     padding: 0;
     box-sizing: border-box;
     transition: .3s ease;
+    font-family: var(--ui-font);
 }
 
 body {
-    font-family: 'lato', sans-serif;
     transition: background-color 0.3s, color 0.3s; /* Smooth transitions */
 }
 
@@ -408,11 +416,15 @@ select:focus {
     flex: 1 1 250px; /* grow, shrink, min width */
     max-width: 300px; 
     min-width: 200px;
-    background: #f5f5f5;
+    background: #fffcfc;
     padding: 15px;
     border-radius: 8px;
     text-align: center;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+.properties-subdiv:hover{
+    box-shadow: 0 4px 24px rgba(0,0,0,0.1);
 }
 
 .properties-subdiv h1{
