--- a/style/style.css
+++ b/style/style.css
@@ -68,7 +68,7 @@ html {
 /* Enhanced Neo-Noir: Cyan Text, Magenta Boxes */
 
 /* All text: cyan with glow */
-.neo-noir,
+/* .neo-noir,
 .neo-noir h1, 
 .neo-noir h2, 
 .neo-noir h3, 
@@ -77,7 +77,7 @@ html {
 .neo-noir h6, 
 
 
-}
+} */
 
 /* All major containers: magenta box-shadow and subtle border */
 .neo-noir .sections,
@@ -264,10 +264,10 @@ body.light select {
     background: none;
     border: 2px solid #0ff;
     color: #0ff;
-    padding: 0.5rem 1rem;
+    padding: 0.3rem 0.7rem;
     border-radius: 50px;
     cursor: pointer;
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-transform: uppercase;
     letter-spacing: 1px;
     transition: 0.3s;
@@ -428,24 +428,7 @@ select:focus {
 
 
 
-/* ============================= */
-/* RESPONSIVE */
-/* ============================= */
-@media (max-width: 768px) {
-    .nav-links li {
-        display: block;
-        margin: 1rem 0;
-    }
 
-    .nav-links {
-        text-align: center;
-    }
-
-    .controls {
-        flex-direction: column;
-        gap: 1rem;
-    }
-}
 
 /* hidden section  */
 .hidden {
@@ -552,7 +535,7 @@ select:focus {
 /* FOOTER */
 /* ============================= */
 footer {
-    background: linear-gradient(90deg, #049f80, #037a62);
+    background: linear-gradient(90deg, #535354, #3b3b3b);
     font-size: 1rem;
     color: white;
     margin-top: 3rem;
@@ -570,4 +553,88 @@ footer > div {  /* applies to all direct footer children */
 
 .footer-project img{
     width: 100px;
+}
+
+#tech_doc_btn{
+    display: none;
+}
+
+
+/* ============================= */
+/* RESPONSIVE */
+/* ============================= */
+@media (max-width: 768px) {
+    .nav-links li {
+        display: block;
+        margin: 1rem 0;
+    }
+
+    .nav-links {
+        text-align: center;
+    }
+
+    .controls {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    #what p{
+        width: 100%;
+        font-size: medium;
+    }
+
+    #api p{
+        width: 100%;
+        font-size: medium;
+    }
+
+    h2{
+        font-size: 1.5rem;
+    }
+
+    #services p{
+        font-size: medium;
+        width: 100%;
+    }
+
+    .container {
+        padding: 1rem;
+    }
+
+    .sections {
+        padding: 1rem;
+    }
+
+
+    .home header h1{
+        font-size: 3.5rem;
+    }
+
+    .home header p{
+        width: 100%;
+        font-size: large;
+    }
+
+    .home header h2{
+        font-size: 1.8rem;
+    }
+
+    .nav-links{
+        display: none;
+    }
+
+    #tech_doc_btn{
+        display: inline-block;
+        background: none;
+        border: 2px solid rgb(255, 187, 0);
+        color: #0ff;
+        padding: 0.5rem 1rem;
+        border-radius: 50px;
+        cursor: pointer;
+        font-size: 0.7rem;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        transition: 0.3s;
+    }
+    
 }
