--- a/style/style.css
+++ b/style/style.css
@@ -68,7 +68,7 @@ html {
 /* Enhanced Neo-Noir: Cyan Text, Magenta Boxes */
 
 /* All text: cyan with glow */
-/* .neo-noir,
+.neo-noir,
 .neo-noir h1, 
 .neo-noir h2, 
 .neo-noir h3, 
@@ -77,7 +77,7 @@ html {
 .neo-noir h6, 
 
 
-} */
+} 
 
 /* All major containers: magenta box-shadow and subtle border */
 .neo-noir .sections,
@@ -86,7 +86,7 @@ html {
 .neo-noir .navbar {
     background: #222 !important;
     color: #0ff !important;
-    box-shadow: 0 0 18px #ff00ff, 0 2px 20px #ff00ff;
+    box-shadow: 0 0 8px #ff00ff, 0 2px 5px #ff00ff;
     border: 1px solid #ff00ff;
 }
 
@@ -96,7 +96,7 @@ html {
     background-color: #ff00ff !important;
     color: #0ff !important;
     border: 2px solid #ff00ff !important;
-    box-shadow: 0 0 24px #ff00ff, 0 0 36px #ff00ff;
+    box-shadow: 0 0 5px #ff00ff, 0 0 8px #ff00ff;
 }
 
 /* Button hover: swap to cyan background, magenta text */
@@ -124,6 +124,35 @@ html {
     color: #ff00ff !important;
     background-color: #0ff !important;
     box-shadow: 0 0 18px #0ff, 0 0 36px #ff00ff;
+}
+ 
+/* Reduce magenta glow on major containers */
+.neo-noir .sections,
+.neo-noir .properties-subdiv,
+.neo-noir #what_subdiv > div,
+.neo-noir .navbar {
+    box-shadow: 0 0 3px #ff00ff, 0 1px 3px #ff00ff;
+}
+
+/* Improve text contrast in properties-subdiv */
+.neo-noir .properties-subdiv h1,
+.neo-noir .properties-subdiv p {
+    color: #0ff !important;
+    text-shadow: 0 0 2px #fff;
+}
+
+/* Property sub div: black background, white text, subtle cyan glow */
+.properties-subdiv {
+    background: #000 !important;
+    color: #fff !important;
+    box-shadow: 0 0 4px #0ff, 0 1px 3px #0ff;
+}
+
+/* If you want headings and paragraphs inside to pop with subtle cyan glow: */
+.properties-subdiv h1,
+.properties-subdiv p {
+    color: #fff !important;
+    text-shadow: 0 0 2px #0ff;
 }
 
 /* Light Theme */
