Update style.css making the shadow same for button and p sub div

--- a/style/style.css
+++ b/style/style.css
@@ -155,6 +155,13 @@ html {
     text-shadow: 0 0 2px #0ff;
 }
 
+.spcl-btn,
+.neo-noir .spcl-btn,
+.properties-subdiv,
+.neo-noir .properties-subdiv {
+    box-shadow: 0 0 8px #ff00ff, 0 2px 5px #ff00ff !important;
+}
+
 /* Light Theme */
 .light {
     background-color: #f4f4f9;
